# Media-Recommendation-Engine

./: .gitignore  Cargo.toml  README.md  build_ext.cmd
.github/workflows/: rust.yml
chrome_extension/: Cargo.toml  manifest.json  run_wasm.js
database/: DATABASE GOES HERE
database/sql/: init.sql
database/sql/deletion/: indexing.sql  sessions.sql  storage_locations.sql  users.sql
database/sql/init/: data.sql  users.sql
ffmpeg/: NOTE
frontend/: video.js  ws.js
frontend/content/: debug_error.html  err404.html  error.html  grid_element.html  homepage.html  index.html  large_preview_image.html  library.html  login.html  notification.html  preview.html  recommendation_popup.html  setting.html  settings.html  swap_in.html  video.html
frontend/content/settings/: account_section.html  admin_section.html  creation.html  creation_input.html  location_entry.html  profile_section.html  setting.html  settings.html  user_creation.html  user_entry.html
frontend/scripts/: back.js  debug_swap.js  root.js  settings.js  sse.js  video.js  ws.js
frontend/styles/: default.css  error.css  library.css  library_heading.css  login.css  notifications.css  popups.css  preview.css  settings.css  video.css
macros/: Cargo.toml
macros/src/: lib.rs
media_recommendation_engine/: Cargo.toml  askama.toml
media_recommendation_engine/src/: database.rs  indexing.rs  main.rs  state.rs  templating.rs
media_recommendation_engine/src/indexing/: classify.rs  db.rs  file_handling.rs  mod.rs
media_recommendation_engine/src/recommendation/: mod.rs
media_recommendation_engine/src/recommendor/: mod.rs
media_recommendation_engine/src/routes/: error.rs  explore.rs  homepage.rs  library.rs  login.rs  mod.rs  settings.rs  streaming.rs
media_recommendation_engine/src/utils/: auth.rs  errorext.rs  frontend.rs  mod.rs  parsing.rs  settings.rs  streaming.rs  templates.rs  tracing.rs  watchstream.rs
media_recommendation_engine/src/utils/streaming/: cache.rs  communication.rs  mod.rs  playlist.rs  session.rs  streamidentifier.rs  transcode.rs
src/: database.rs  indexing.rs  library.rs  main.rs  state.rs  utils.rs
src/routes/: homepage.rs  library.rs  mod.rs  streaming.rs
src/utils/: mod.rs  parsing.rs  tracing.rs
