[package]
name = "media_recommendation_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["macros"] }
time = { version = "0.3.30", features = ["local-offset"] }
r2d2 = "0.8.10"
rusqlite = { version = "0.29.0", features = ["bundled", "vtab", "array"] }
tokio = { version = "1.32.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower = { version = "0.4.13", default-features = false, features = ["util"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "fmt", "time"] }
