[package]
name = "media_recommendation_engine"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/GrandmasterB42/Media-Recommendation-Engine"
description = "Aiming to be a self-hosted media manager and recommendation site"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros", "query", "ws"] }
time = { version = "0.3.30", features = ["local-offset"] }
r2d2 = "0.8.10"
rusqlite = { version = "0.30", features = ["bundled"] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "process",
] }
tower = { version = "0.4", default-features = false, features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "fmt", "time"] }
serde = { version = "1", features = ["derive"] }
futures-util = "0.3.30"
serde_json = "1"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
ffmpeg-next = "6.1.1"
axum-login = "0.15.0"
tower-sessions = { version = "0.12.0", default-features = false, features = [
    "signed",
] }
tower-sessions-core = { version = "0.12.0", default-features = false, features = [
    "deletion-task",
] }
rmp-serde = "1.1.2"
password-auth = "1.0.0"
tokio-util = "0.7.10"
toml = "0.8.12"
clap = { version = "4.5.4", features = ["derive"] }
sha2 = "0.10.8"
anyhow = "1.0.86"
